# sudoku-sandbox

./: .gitignore  README.md  euler_p096.ipynb  pyproject.toml  renderer.py  sandbox.ipynb  solution.txt  solver.py  sudoku.py
.ipynb_checkpoints/: sandbox-checkpoint.ipynb
sudoku/: common.py  main.py  renderer.py  solver.py  sudoku.py
