[tool.poetry]
name = "sudoku-sandbox"
version = "0.1.0"
description = ""
authors = ["Vishal Talwar <rawlatv@gmail.com>"]
readme = "README.md"
packages = [{ include = "sudoku" }]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"
termcolor = "^2.0.1"

[tool.poetry.scripts]
solve = "sudoku.main:main"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
